# libsundaowen_mbedtls_cmake

./: .gitmodules  CMakeLists.txt  README.md
mbedtls_no_asm/include/mbedtls/: config.h
